# local_data_studio

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  app.py  local_data_studio.example.toml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-please.yml
data/: example.jsonl
docs/: IMPLEMENTATION_NOTES.md  IMPLEMENTATION_NOTES_ja.md  README_ja.md  atlas_sigsegv_incident_log_ja.md
server/: atlas.py  atlas_cache.py  atlas_cache_patch.py  cache.py  config.py  db.py  eda.py  files.py  jobs.py  line_index.py  llm.py  readers.py  serialization.py  sql.py
src/local_data_studio/: __init__.py  __main__.py  app.py  cli.py  runtime_config.py
src/local_data_studio/server/: atlas.py  atlas_cache.py  atlas_cache_patch.py  cache.py  config.py  delete_ops.py  deleted_rows.py  eda.py  eda_reports.py  embedder_capabilities.py  embedder_models.py  files.py  jobs.py  line_index.py  llm.py  llm_client.py  llm_profiles.py  llm_prompt.py  llm_service.py  readers.py  serialization.py  sql.py  stats.py  translation_config.py  translation_service.py  translation_values.py
src/local_data_studio/server/api/: __init__.py  analysis.py  atlas_proxy.py  datasets.py  jobs.py  mutations.py  schemas.py  services.py  static.py
src/local_data_studio/server/atlas_components/: __init__.py  command.py  contracts.py  dataset.py  embedding_backends.py  embedding_session.py  image_values.py  images.py  output_frames.py  ports.py  process.py  projection.py  projection_inputs.py  prompts.py  readiness.py  reducers.py  runtime.py  sampling.py  service.py
src/local_data_studio/server/column_stats/: __init__.py  accumulator.py  heuristics.py  service.py
src/local_data_studio/server/dataset_readers/: __init__.py  common.py  contracts.py  delimited.py  json_reader.py  jsonl.py  line.py  line_cursor.py  line_indexing.py  parquet.py  service.py
src/local_data_studio/static/: app.js  index.html  styles.css
src/local_data_studio/static/app/: application.js  atlas.js  dom.js  formatting.js  http.js  images.js  llm.js  selects.js  state.js  translation.js
static/: app.js  index.html  styles.css
tests/: test_api_jobs.py  test_app_contracts.py  test_atlas.py  test_atlas_projection.py  test_atlas_prompts.py  test_atlas_proxy.py  test_cache.py  test_cli.py  test_eda.py  test_embedder_capabilities.py  test_files.py  test_jobs.py  test_llm.py  test_llm_profiles.py  test_readers.py  test_runtime_contracts.py  test_serialization.py  test_stats.py  test_translation.py
