[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "local-data-studio"
version = "0.1.0"
description = "Local web viewer for jsonl/json/csv/tsv/parquet files"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Daiki Shiono" },
]
keywords = ["data-viewer", "jsonl", "parquet", "duckdb", "eda", "embedding-atlas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.125.0",
  "uvicorn>=0.50.0",
  "pydantic>=2.6.0,<2.7.0",
  "pydantic-settings>=2.2.0,<2.3.0",
  "duckdb>=1.4.0,<2.0.0",
  "zarque-profiling",
  "pandas>=2.2.0,<2.3.0",
  "python-dotenv",
  "python-multipart",
  "scipy>=1.12.0,<1.13.0",
  "pyarrow>=24.0.0",
  "matplotlib>=3.8.0,<3.9.0",
  "embedding-atlas",
  "qwen-vl-utils>=0.0.14",
  "sentence-transformers>=5.6.0",
  "transformers>=5.13.0",
  "torchvision>=0.27.1",
]

[project.urls]
Homepage = "https://github.com/Onely7/local_data_studio"
Repository = "https://github.com/Onely7/local_data_studio"
Issues = "https://github.com/Onely7/local_data_studio/issues"

[project.scripts]
local-data-studio = "local_data_studio.cli:main"

[dependency-groups]
dev = [
  "build",
  "pre-commit",
  "pytest",
  "ruff",
  "twine",
  "ty",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_data_studio"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/images",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/uv.lock",
]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", "third_party"]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",   # flake8-builtin
    "B",   # flake8-bugbear
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",     # Zip-without-explicit-strict
    "E501",     # Line too long, handled by black
    "F401",     # module imported but unused
    "F403",     # Unable to detect undefined names
    "N812",     # Lowercase imported as non-lowercase
    "N999",     # Invalid module name
    "UP035",    # Checks for uses of deprecated imports based on the minimum supported Python version.
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements in function
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true  # Settings for Python 3.8 compatibility

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src/local_data_studio"]
