[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "local-data-studio"
version = "0.1.0"
description = "Local data studio for JSONL/JSON/CSV/TSV/Parquet with scalable previews, image inspection, DuckDB SQL, EDA, and Embedding Atlas"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Daiki Shiono" },
]
keywords = ["data-viewer", "dataset-viewer", "data-exploration", "jsonl", "parquet", "duckdb", "eda", "embedding-atlas", "image-datasets"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.139,<1",
  "uvicorn>=0.50.0",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "duckdb>=1.4.0,<2.0.0",
  "pandas>=2.2.0,<2.3.0",
  "python-dotenv",
  "python-multipart",
  "scipy>=1.12.0,<1.17.0",
  "scikit-learn>=1.7.0,<2",
  "pyarrow>=24.0.0",
  "matplotlib>=3.8.0,<3.11.0",
  "embedding-atlas>=0.20.0,<0.22.0",
  "qwen-vl-utils>=0.0.14",
  "sentence-transformers>=5.6.0",
  "setuptools>=80,<81", # ydata-profiling still imports pkg_resources
  "transformers>=5.13.0",
  "torchvision>=0.27.1",
  "ydata-profiling>=4.18.4,<5",
  "requests>=2.33,<3",
  "httpx>=0.28,<1",
  "litellm>=1.84,<2",
  "starlette>=1.3.1,<2",
  "polars>=1.42,<2",
]

[project.urls]
Homepage = "https://github.com/Onely7/local_data_studio"
Repository = "https://github.com/Onely7/local_data_studio"
Issues = "https://github.com/Onely7/local_data_studio/issues"

[project.scripts]
local-data-studio = "local_data_studio.cli:main"

[dependency-groups]
dev = [
  "build",
  "pre-commit",
  "pytest",
  "ruff",
  "twine",
  "ty",
]

[tool.uv]
cache-dir = ".uv-cache"

[tool.hatch.build.targets.wheel]
packages = ["src/local_data_studio"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/images",
  "/README.md",
  "/LICENSE",
  "/local_data_studio.example.toml",
  "/pyproject.toml",
  "/uv.lock",
]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", "third_party"]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",   # flake8-builtin
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "B905",     # Zip-without-explicit-strict
    "E501",     # Line too long, handled by black
    "N812",     # Lowercase imported as non-lowercase
    "N999",     # Invalid module name
    "UP035",    # Checks for uses of deprecated imports based on the minimum supported Python version.
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements in function
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"src/local_data_studio/server/atlas.py" = ["F401"]
"src/local_data_studio/server/atlas_components/process.py" = ["F401"]
"src/local_data_studio/server/dataset_readers/line.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = ["src/local_data_studio"]
